--- a/public/css/form.pages.css
+++ b/public/css/form.pages.css
@@ -1,3 +1,13 @@
+body {
+    width: 100%;
+    background: #1f7a8c;
+background: -webkit-linear-gradient(left, #1f7a8c, #79bcb8);
+background: -moz-linear-gradient(left, #1f7a8c, #79bcb8);
+background: -ms-linear-gradient(left, #1f7a8c, #79bcb8);
+background: -o-linear-gradient(left, #1f7a8c, #79bcb8);
+background: linear-gradient(to right, #1f7a8c, #79bcb8);
+}
+
 #form-page-container {
     margin: 0px;
     width: 100%;
@@ -14,10 +24,20 @@
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
     border-radius: 15px;
-    /* display: none; */
+    background: #f9f9f9;
+    /* box-shadow: 5px 5px 5px 5px #696969; */
+    border: 1px solid #696969;
+    box-shadow:  -1px 1px #696969,
+         -2px 2px #696969,
+         -3px 3px #696969,
+         -4px 4px #696969,
+         -5px 5px #696969;
+    display: none;
 }
 
 #form-2 {
+    width: 75%;
+    background: #f9f9f9;
     margin: 0 auto; 
     border: solid; 
     border-width: .5rem;
@@ -27,10 +47,16 @@
     display: none;
     margin-bottom: 2.5rem;
     border-radius: 15px;
+    border: 1px solid #696969;
+    box-shadow:  -1px 1px #696969,
+         -2px 2px #696969,
+         -3px 3px #696969,
+         -4px 4px #696969,
+         -5px 5px #696969;
 }
 
 #form-3 {
-    width: 50%; 
+    background: #f9f9f9;
     margin: 0 auto; 
     border: solid; 
     border-width: .5rem;
@@ -40,10 +66,16 @@
     display: none;
     margin-bottom: 2.5rem;
     border-radius: 15px;
+    border: 1px solid #696969;
+    box-shadow:  -1px 1px #696969,
+         -2px 2px #696969,
+         -3px 3px #696969,
+         -4px 4px #696969,
+         -5px 5px #696969;
 }
 
 #form-4 {
-    width: 50%; 
+    background: #f9f9f9;
     margin: 0 auto; 
     border: solid; 
     border-width: .5rem;
@@ -53,10 +85,16 @@
     display: none;
     margin-bottom: 2.5rem;
     border-radius: 15px;
+    border: 1px solid #696969;
+    box-shadow:  -1px 1px #696969,
+         -2px 2px #696969,
+         -3px 3px #696969,
+         -4px 4px #696969,
+         -5px 5px #696969;
 }
 
 #form-5 {
-    width: 50%; 
+    background: #f9f9f9;
     margin: 0 auto; 
     border: solid; 
     border-width: .5rem;
@@ -66,23 +104,38 @@
     display: none;
     margin-bottom: 2.5rem;
     border-radius: 15px;
+    border: 1px solid #696969;
+    box-shadow:  -1px 1px #696969,
+         -2px 2px #696969,
+         -3px 3px #696969,
+         -4px 4px #696969,
+         -5px 5px #696969;
 }
 
 #form-6 {
-    width: 50%; 
+    width: 50%;
+    background: #f9f9f9;
     margin: 0 auto; 
     border: solid; 
     border-width: .5rem;
     padding: 2.5rem;
+    padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
     border-color: #1F7A8C;
     margin-top: 2.5rem;
-    display: none;
+    /* display: none; */
     margin-bottom: 2.5rem;
     border-radius: 15px;
+    border: 1px solid #696969;
+    box-shadow:  -1px 1px #696969,
+         -2px 2px #696969,
+         -3px 3px #696969,
+         -4px 4px #696969,
+         -5px 5px #696969;
 }
 
 #form-7 {
-    width: 50%; 
+    background: #f9f9f9;
     margin: 0 auto; 
     border: solid; 
     border-width: .5rem;
@@ -92,6 +145,12 @@
     display: none;
     margin-bottom: 2.5rem;
     border-radius: 15px;
+    border: 1px solid #696969;
+    box-shadow:  -1px 1px #696969,
+         -2px 2px #696969,
+         -3px 3px #696969,
+         -4px 4px #696969,
+         -5px 5px #696969;
 }
 
 #labels-1 {
@@ -186,4 +245,96 @@
     background: #f9f9f9;
     color: #1f7a8c;
     padding: 0.5rem;
+  }
+
+  li.progress {
+      font-family: 'Lato';
+      font-weight: 400;
+      font-size: 18px;
+      letter-spacing: .15em;
+      color: #696969;
+  }
+
+  /* progress bar  */
+  #progressbar {
+    /* margin-bottom: 30px; */
+    padding-bottom: 2.5rem;
+    padding-top: 2.5rem;
+    margin-bottom: 0px;
+	overflow: hidden;
+	/*CSS counters to number the steps*/
+	counter-reset: step;
+}
+#progressbar li {
+	list-style-type: none;
+	color: #f9f9f9;
+	text-transform: uppercase;
+	width: 14%;
+	float: left;
+    position: relative;
+    text-align: center;
+}
+#progressbar li:before {
+	content: counter(step);
+	counter-increment: step;
+    width: 35px;
+    padding: .5rem;
+	line-height: 20px;
+	display: block;
+	color: #696969;
+	background: white;
+	border-radius: 3px;
+	margin: 0 auto 0 auto;
+}
+/*progressbar connectors*/
+#progressbar li:after {
+    content: '';
+	width: 100%;
+	height: 2px;
+	background: white;
+	position: absolute;
+	left: -50%;
+	top: 9px;
+	z-index: -1; /*put it behind the numbers*/
+}
+#progressbar li:first-child:after {
+	/*connector not needed before the first step*/
+	content: none; 
+}
+/*marking active/completed steps green*/
+/*The number of the step and the connector before it = green*/
+#progressbar li.active:before,  #progressbar li.active:after{
+	background: #70b891;
+	color: white;
+}
+
+.image {
+    position: relative;
+    display: block;
+    height: 200px;
+    width: auto;
+  }
+  
+  .overlay {
+    position: absolute;
+    left: 0;
+    z-index: 5;
+  }
+
+  div.other-image-display {
+    position: relative;
+    display: inline-block;
+    height: 200px;
+    width: auto;
+    /* max-width: 50%; */
+    margin: .5rem;
+    clear: left;
+  }
+
+  #other-append {
+      margin-top: .5rem;
+  }
+
+  #other-image-append {
+    display: table;
   }
